--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -32,6 +32,12 @@
                 <select asp-for="GenreID" class ="form-control" asp-items="ViewBag.GenreID"></select>
             </div>
             <div class="form-group">
+                <label asp-for="AuthorID" class="control-label"></label>
+                <select asp-for="AuthorID" class="form-control" asp-items="ViewBag.AuthorID"></select>
+                <span asp-validation-for="AuthorID" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
