--- a/Views/Books/Delete.cshtml
+++ b/Views/Books/Delete.cshtml
@@ -35,6 +35,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre.ID)
         </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Author.ID)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
