--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -34,6 +34,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Genre.ID)
         </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Author.ID)
+        </dd>
     </dl>
 </div>
 <div>
