--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ferent_Ioan_Lab2</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
